--- a/app/src/main/res/drawable/shaping.xml
+++ b/app/src/main/res/drawable/shaping.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <!-- we define background color -->
-    <solid android:color="@color/blue_sky" />
+    <solid android:color="?android:attr/colorPrimary" />
 
     <!-- add some padding for text inside -->
 
