--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,25 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.VinChou" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.VinChou" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue_alpha2</item>
-        <item name="colorPrimaryVariant">@color/blue_alpha2</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">@color/blue_alpha3</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/blue_alpha2</item>
-        <item name="colorSecondaryVariant">@color/blue_alpha2</item>
-        <item name="colorOnSecondary">@color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor">@color/colorPrimaryVariant</item>
+
     </style>
 
     <style name="Theme.splash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/blue_alpha3</item>
-        <item name="colorOnPrimary">@color/black_alpha2</item>
-        <item name="android:navigationBarColor">@color/blue_sky</item>
-        <item name="colorPrimaryVariant">@color/blue_sky</item>
-
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/colorPrimaryVariant</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
     </style>
+
 </resources>
