--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,24 +1,42 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
+
+
     <!-- Base application theme. -->
     <style name="Theme.VinChou" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/blue_alpha3</item>
-        <item name="colorPrimaryVariant">@color/blue_alpha3</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/blue_alpha3</item>
-        <item name="colorSecondaryVariant">@color/blue_alpha3</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorAccent">@color/blue_alpha3</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor">@color/colorPrimaryVariant</item>
+
     </style>
 
     <style name="Theme.splash" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/blue_alpha2</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="android:navigationBarColor">@color/blue_sky</item>
-        <item name="colorPrimaryVariant">@color/blue_sky</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/colorPrimaryVariant</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
     </style>
+
+    <!-- theme of my application -->
+
+
+    <style name="TextBirth" parent="Widget.MaterialComponents.TextView">
+        <item name = "android:fontFamily">monospace</item>
+        <item name="android:textSize"> @dimen/smallText </item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="Textcompter" parent="TextBirth">
+        <item name="android:textSize">@dimen/mediumText</item>
+    </style>
+
+
 </resources>
